@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 === Added
 
 * add :wrap option to control line wrapping behavior (:ventilate, :none, and :preserve) (#11)
+* add --wrap CLI option to control :wrap option (#11)
 
 === Changed
 
